fix: white-space + text-overflow for header-content

--- a/src/ActivityTags/style.css
+++ b/src/ActivityTags/style.css
@@ -252,19 +252,28 @@
 
 .activity-follow-infor-left {
   flex-grow: 1;
+  min-width: 0;
 }
 
 .activity-follow-infor-header {
   display: flex;
   gap: 2px;
+  max-width: 100%;
+  overflow: hidden;
 }
 
+.activity-follow-infor-header-name {
+  max-width: calc(100vw / 3.5);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  align-items: center;
+}
 .activity-follow-infor-header-name span {
   font-size: 15px;
   font-weight: 600;
-  color: #f3f5f7;
-  text-overflow: ellipsis;
   max-width: 100%;
+  color: #f3f5f7;
 }
 
 .activity-follow-infor-header-time span {
